<resources>
    <string name="app_name">Group8_InClass10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses">Courses</string>
    <string name="course_num">Course Number</string>
    <string name="course_name">Course Name</string>
    <string name="credit_hrs">Credit Hours</string>
    <string name="course_grade">Course Grade</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="grades_title">Grades</string>
</resources>