<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseFragment">

    <EditText
        android:id="@+id/editTextCourseNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/course_num"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/course_name"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCourseNumber"
        app:layout_constraintStart_toStartOf="@+id/editTextCourseNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseNumber" />

    <EditText
        android:id="@+id/editTextHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/credit_hrs"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCourseName"
        app:layout_constraintStart_toStartOf="@+id/editTextCourseName"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseName" />

    <RadioGroup
        android:id="@+id/radioGroupCourseGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButton_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_grade"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextCourseNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextHours" />

    <Button
        android:id="@+id/buttonSubmitCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCourseGrade" />

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmitCourse"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmitCourse" />
</androidx.constraintlayout.widget.ConstraintLayout>